Se crea el servicio cliente de SELECCIONES de la API

--- a/src/features/componentes/seleccion/seleccion.component.html
+++ b/src/features/componentes/seleccion/seleccion.component.html
@@ -17,5 +17,5 @@
     <button mat-raised-button color="accent" (click)="modificar()">Modificar</button>
     <button mat-raised-button color="warn" (click)="eliminar()">Eliminar</button>
 
-    <ngx-datatable></ngx-datatable>
+    <ngx-datatable class="dark"></ngx-datatable>
 </div>
